<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginRight="@dimen/_40sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/test_image"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_105sdp"
            android:layout_gravity="center"
            android:src="@drawable/mrb_logo" />


        <EditText
            android:id="@+id/ed_phone_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_80sdp"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/hintColor"
            android:background="@drawable/rounded_edit_text"
            android:drawableLeft="@drawable/phone_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/str_phone_hint"
            android:inputType="number"
            android:maxLength="10"
            android:padding="@dimen/_10sdp"
            android:singleLine="true" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/rounded_edit_text"
            android:drawableLeft="@drawable/lock_icon"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/str_password_hint"
            android:textSize="@dimen/_14sdp"
            android:textColorHint="@color/hintColor"
            android:inputType="textPassword"
            android:padding="@dimen/_10sdp"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/rounded_blue_button"
            android:onClick="onClick"
            android:text="@string/str_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />


        <TextView
            android:id="@+id/txt_forgot_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="@string/forgot_pwd"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/dont_hv_acct"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/textViewSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/str_signup"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>