<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"></include>

    <ImageView
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_30sdp"
        android:src="@drawable/help_icon"></ImageView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/need_help_message"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14sdp"></TextView>

    <LinearLayout
        android:id="@+id/ll_call"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/rounded_blue_button"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/ic_call_button"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_call"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_mail"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/rounded_blue_button"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_10sdp"
            android:src="@drawable/ic_mail_button"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_mail"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_40sdp"
        android:gravity="center"
        android:text="@string/rate_us"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14sdp" />
</LinearLayout>