<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_screen_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:onClick="onClick"
            android:src="@drawable/back_icon" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/refre_round_layout"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/str_transfer_bank_detail"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_18sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/str_account_holder_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="@dimen/_6sdp"
                    android:singleLine="true" />
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/str_account_no"
                    android:textColor="@color/colorAccent"

                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="number"
                    android:padding="@dimen/_6sdp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/str_ifsc"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/rounded_edit_text"
                    android:padding="@dimen/_6sdp"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:text="@string/str_amount"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/_14sdp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:background="@drawable/rounded_edit_text"
                    android:inputType="numberDecimal"
                    android:padding="@dimen/_6sdp"
                    android:singleLine="true" />
            </LinearLayout>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="@dimen/_140sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_40sdp"
                android:background="@drawable/rounded_blue_button"
                android:onClick="onClick"
                android:text="@string/str_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />


        </LinearLayout>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>