<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_without_search">

    </include>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_60sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_60sdp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lineSpacingExtra="@dimen/_4sdp"
                android:text="Your OTP has been sent on
+91 9876543210 please enter OTP to
reset your password" />

            <EditText
                android:id="@+id/ed_otp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/phone_icon"
                android:drawablePadding="@dimen/_12sdp"
                android:hint="@string/str_otp"
                android:padding="@dimen/_8sdp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/str_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/ed_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/rounded_edit_text"
                android:drawableLeft="@drawable/lock_icon"
                android:drawablePadding="@dimen/_10sdp"
                android:hint="@string/str_confirm_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/_10sdp"
                android:singleLine="true"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/_14sdp" />


            <Button
                android:id="@+id/btn_Submit"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@drawable/rounded_blue_button"
                android:padding="@dimen/_8sdp"
                android:text="@string/str_submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>